<resources>

    <!-- App -->
    <string name="app_name">VrumSync v1.0.0.0</string>

    <!-- Carro -->
    <string name="car_year">Ano: %1$s</string>

    <!-- Sucesso / Erro -->
    <string name="success_update">Carro editado com sucesso</string>
    <string name="error_update">Erro ao editar o carro</string>

    <string name="error_delete">Erro ao deletar o carro</string>
    <string name="success_delete">Carro deletado com sucesso</string>

    <string name="error_fetch_item">Erro ao buscar o carro</string>

    <string name="generical_error">Erro desconhecido, clique para tentar novamente.</string>
    <string name="no_items">Nenhum carro disponível.</string>

    <string name="error_add_item">Erro ao adicionar o carro.</string>
    <string name="success_add_item">Carro adicionado com sucesso.</string>

    <!-- Validação -->
    <string name="required_field">Campo obrigatório</string>

    <!-- Localização -->
    <string name="location_permission_denied">Permissão de localização negada.</string>

    <!-- Login -->
    <string name="hint_cellphone">+55 11 91234-5678</string>
    <string name="code_brazil">+55</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="hint_verify_sms">123456</string>
    <string name="verify_sms">Verificar SMS</string>

    <!-- Menu -->
    <string name="menu_loggout">Sair</string>

</resources>